- Fix: Sidebar widget lists with long post/page titles don't overflow widget boundaries - 404, Search and Archive pages now set with .entry class for consistency with blog, page, home and single post pages

--- a/style.css
+++ b/style.css
@@ -239,6 +239,10 @@ abbr, acronym {
 	font-variant:normal;
 }
 
+.hidden {
+	display: none;
+}
+
 /*
 Theme Fonts
 -----------
@@ -1251,16 +1255,14 @@ Site Footer
 	font-size: 1.1rem;
 }
 
-
 /*
- * Miscellaneous
+Sidebars
 ---------------------------------------------------------------------------------------------------- */
-
-/* hidden class, used to fix IE6 problems */
-
-.hidden {
-	display: none;
+#sidebar li,
+#sidebar2 li {
+	word-wrap: break-word;
 }
+
 
 /* dropdowns in sidebars */
 
